--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -2,7 +2,7 @@
 - name: Verify
   hosts: all
   become: yes
-  gather_facts: yes
+  gather_facts: no
 
   tasks:
     - name: check if ports are open
@@ -21,4 +21,12 @@
           - 500
           - 502
           - 503
+        validate_certs: no
+
+    - name: see if TRACE option returns 405
+      uri:
+        url: "https://127.0.0.1:8443/"
+        method: TRACE
+        status_code:
+          - 405
         validate_certs: no
